# jobs_comparison

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  build_db.py  compare_positions.py  galileo_jobs.py  helpers.py  load_txt_to_db.py  main.py  pyproject.toml  requirements.txt  sofi_jobs.py  total_jobs.py
backend/: .dockerignore  Dockerfile  __init__.py  main.py  requirements-dev.txt  requirements-prod.txt
backend/app/: api.py  build_db.py  company.json  compare_positions.py  constants.py  database.py  decorators.py  exceptions.py  galileo_jobs.py  helpers.py  load_txt_to_db.py  models.py  proj_typing.py  scrape_api.py  sofi_jobs.py  total_jobs.py  types.py
backend/deploy/: .env.sample  Dockerfile
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  ChangeDate.tsx  ChangesDataComponent.tsx  ChangesGroup.tsx  DepartmentData.tsx  index.css  main.tsx
frontend/src/interfaces/: Company.ts
k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  mysql_deployment.yaml
